# Concha-Labs-Take-Home-Project

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  bucket_metadata.cfg  concha-labs-take-home-project-b91859524e56.json  pytest.ini  requirements.txt  setup.cfg  setup.py  start.sh
scripts/: delete_server_resources.py  provision_bucket.py
src/main/: __init__.py  openapi.yaml  schema.sql
src/main/controllers/: accounts.py  audios.py  docs.py
src/main/data_sources/: db.py
src/main/data_sources/buckets/: audios.py  images.py
src/main/exceptions/: NoSuchInstanceError.py  ValidationError.py  __init__.py
src/main/helpers/: dict_utils.py  email_utils.py  header_utils.py  storage_utils.py
src/main/models/: Audio.py  HttpProblem.py  UserInfo.py  __init__.py
src/main/parse_request/: __init__.py
src/main/services/: audios.py  user_infos.py
tests/: conftest.py  test_audios_service.py  test_db.py  test_factory.py  test_parse_request.py  test_user_info_service.py
tests/e2e/: test_audios_flow.py  test_user_infos_flow.py
tests/helpers/: list_utils.py  requests_assertion.py
tests/test_data/: seed.sql
