[metadata]
name = main
version = 1.0.0
description = Backend server for take home project
long_description = file: README.md


[options]
packages = find:
include_package_data = true

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    src.main
